<resources>
    <string name="resource_not_found">Resource not found</string>
    <string name="resource_not_found_message">The requested resource could not be found</string>
    <string name="community_earnings">Community total earnings: **$%1$d** /$500</string>
    <string name="your_earnings">Your total earnings: **$%1$d** /$11</string>
    <string name="congratulations">Congratulations! Challenge Completed</string>
    <string name="daily_voices">of 5 Daily Voices</string>
    <string name="share_opinion">Share your opinion in Our Voices.[$2/voice]</string>
    <string name="remember_sync">Remember to sync the mobile app.</string>
    <string name="per_survey">%1$s per survey</string>
    <string name="course_completed">%1$s completed!</string>
    <string name="course_cover_image">Course cover image</string>
    <string name="course_in_progress">Enter the course %1$s and complete it (%2$d of %3$d done)</string>
    <string name="course_not_started">%1$s not started</string>
    <string name="app_name">My Planet</string>
    <string name="planet">Planet</string>
    <string name="app_project_name">myPlanet</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">username</string>
    <string name="btn_back">Back</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="select_team">select team</string>
    <string name="loading">Loading…</string>
    <string name="btn_sync_save">Save</string>
    <string name="err_msg_name">Enter your username</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_login">Username and/or password do not match</string>
    <string name="hint_serverURL">planet ip</string>
    <string name="hint_serverPin">server pin</string>
    <string name="radio_http">http</string>
    <string name="radio_https">https</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="menu_myplanet">myPlanet</string>
    <string name="menu_home">Home</string>
    <string name="menu_library">Library</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_surveys">Surveys</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_feedback">Feedback</string>
    <string name="system_name">myPlanet</string>
    <string name="txt_myLibrary">myLibrary</string>
    <string name="txt_myCourses">myCourses</string>
    <string name="txt_myMeetups">myMeetups</string>
    <string name="txt_myTeams">myTeams</string>
    <string name="button_submit">Submit</string>
    <string name="button_cancel">Cancel</string>
    <string name="download_suggestion">The following files are not downloaded. Do you want to download them for offline use?</string>
    <string name="download_selected">Download Selected</string>
    <string name="txt_cancel">Cancel</string>
    <string name="download_all">Download All</string>
    <string name="join_selected">Join Selected</string>
    <string name="join">Join</string>
    <string name="add_to_mylib">Add To myLibrary</string>
    <string name="step">step</string>
    <string name="submission">mySubmissions</string>
    <string name="calendar">Calendar</string>
    <string name="email">Email</string>
    <string name="documents">Documents</string>
    <string name="your_ans">Your Answer</string>
    <string name="delete_my_course">Delete myCourse</string>
    <string name="invite_member">Invite Member</string>
    <string name="is_urgent">Is your feedback Urgent? *</string>
    <string name="feedback_type">Feedback Type: *</string>
    <string name="suggestion">Suggestion</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="question">Question</string>
    <string name="bug">Bug</string>
    <string name="your_feedback">Your Feedback *</string>
    <string name="button_update">Update</string>
    <string-array name="level">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
        <item>Expert</item>
    </string-array>
    <string name="select_level">Select Level</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth Date</string>
    <string name="phone_number">Phone Number</string>
    <string-array name="language">
        <item>English</item>
        <item>नेपाली</item>
        <item>Français</item>
        <item>Español</item>
        <item>عربى</item>
        <item>Somali</item>
    </string-array>
    <string name="last_name">Last Name</string>
    <string name="version">Version %s</string>
    <string name="middle_name">Middle Name</string>
    <string name="first_name">First Name</string>
    <string name="search_dots">Search…</string>
    <string name="download">Download</string>
    <string name="published_by">Published By:</string>
    <string name="author">Author:</string>
    <string name="language_with_colon">Language:</string>
    <string name="subject">Subject(s)*:</string>
    <string name="license">License:</string>
    <string name="type">Type:</string>
    <string name="resource_colon">Resource:</string>
    <string name="your_rating">Your Rating</string>
    <string name="loading_user_profile">Preparing your profile…</string>
    <string name="your_comment">Leave your comment</string>
    <string name="sync_now">Sync Now</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="mic_button_content_description">Speech to text</string>
    <string name="voice_to_text">listening…</string>
    <string name="user">User</string>
    <string name="remove_selected">Remove Selected</string>
    <string name="stop_download">Stop Download</string>
    <string name="downloading_file">Downloading file…</string>
    <string name="cancel">cancel</string>
    <string name="added_to">added to</string>
    <string name="removed_from">removed from</string>
    <string name="my_courses">My Courses</string>
    <string name="filter_collections">Filter Collections</string>
    <string name="select_many_collections">Select Many Collections</string>
    <string name="collections">Collections</string>
    <string name="filter_by_category">Filter By Category</string>
    <string name="ok">OK</string>
    <string name="inactive_message">User not activated, please contact administrator or manager to activate your account.</string>
    <string name="edit_achievement">Edit Achievements</string>
    <string name="add_resources">Add Resources</string>
    <string name="description">Description *</string>
    <string name="title_asterisk">Title *</string>
    <string name="name_asterisk">Name *</string>
    <string name="relationship">Relationship</string>
    <string name="date">Date</string>
    <string name="birth_place">Birth Place</string>
    <string name="clear_tags">Clear</string>
    <string name="add_an_achievement">Add an Achievement</string>
    <string name="add_a_reference">Add a Reference</string>
    <string name="subjects">Subjects</string>
    <string name="mediums">Mediums</string>
    <string name="levels">Levels*</string>
    <string name="languages">Languages</string>
    <string name="txt_myLife">myLife</string>
    <string name="achievements">myAchievements</string>
    <string name="references">References</string>
    <string name="maps">Maps</string>
    <string name="btn_guest_login">Login As Guest</string>
    <string name="enter_username">Enter Username</string>
    <string name="login">Login</string>
    <string name="courses">Courses</string>
    <string name="what_would">What would you like to share?</string>
    <string name="delete_record">Are you sure you want to delete the following ?</string>
    <string name="edit_post">Edit Post</string>
    <string name="get_started">GET STARTED</string>
    <string name="year">Year</string>
    <string name="publisher">Publisher</string>
    <string name="link_to_license">Link to license</string>
    <string name="resource_for">Resource For</string>
    <string name="open_which_file">Open Which File</string>
    <string name="file_upload">File Upload</string>
    <string name="choose_file">Choose File</string>
    <string name="file_downloadable">File downloadable</string>
    <string name="priority">Priority</string>
    <string name="status">Status</string>
    <string name="title_not_compulsary">Title</string>
    <string name="add_message">Add Message</string>
    <string name="added_by">Added By</string>
    <string name="record_audio">Record Audio</string>
    <string name="record_video">Record Video</string>
    <string name="select_gallery">Select From Gallery</string>
    <string name="add_resource">Add Resource:</string>
    <string name="reply">Reply</string>
    <string name="https_protocol">https://</string>
    <string name="http_protocol">http://</string>
    <string name="showing_reply_of">Showing reply of:</string>
    <string name="reply_count_format" translatable="false">(%1$d)</string>
    <string name="open_date">Open Date</string>
    <string name="my_survey">mySurveys</string>
    <string name="failed_to_load_course">Failed to load course</string>
    <string name="cannot_remove_user">User could not be removed</string>
    <string name="no_members_task">No Team members present to assign tasks</string>
    <string name="no_member_selected">No member selected. Please try again</string>
    <string name="english">english</string>
    <string name="spanish">español</string>
    <string name="somali">somali</string>
    <string name="nepali">नेपाली</string>
    <string name="arabic">عربى</string>
    <string name="french">français</string>
    <string-array name="open_With">
        <item>HTML</item>
        <item>PDF.js</item>
        <item>BeLL-Reader</item>
        <item>Mp3</item>
        <item>Flow Video Player</item>
        <item>BeLL Video Book Player</item>
        <item>Native Video</item>
    </string-array>
    <string name="media">Media:</string>
    <string-array name="resource_type">
        <item>Textbook</item>
        <item>Lesson Plan</item>
        <item>Activities</item>
        <item>Exercises</item>
        <item>Discussion Questions</item>
    </string-array>
    <string-array name="array_levels">
        <item>Early Education</item>
        <item>Lower Primary</item>
        <item>Upper Primary</item>
        <item>Lower Secondary</item>
        <item>Upper Secondary</item>
        <item>Undergraduate</item>
        <item>Graduate</item>
        <item>Professional</item>
    </string-array>
    <string name="click_here_to_pick_date">Click here to pick date</string>
    <string name="enterprises">Enterprises</string>
    <string name="team">Teams</string>
    <string name="note">Note *</string>
    <string name="amount">Amount</string>
    <string name="location">Location</string>
    <string name="start_date">Start Date</string>
    <string name="click_here_to_pick_time">Click here to pick time</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="recurring_frequency">Recurring Frequency</string>
    <string name="menu_community">Community</string>
    <string name="add_image">Add Image</string>
    <string name="action_disclaimer">Disclaimer</string>
    <string name="action_about">About</string>
    <string name="select_date">Select Date</string>
    <string name="name">Name</string>
    <string name="ai_chat">AI Chat</string>
    <string name="go_to_feedback_page">go to feedback page</string>
    <string name="finance_image">Transaction image</string>
</resources>