<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.ole.planet.myplanet.ui.dashboard.DashboardActivity">

    <item
        android:id="@+id/menu_goOnline"
        android:icon="@drawable/goonline"
        android:orderInCategory="100"
        android:title="@string/user"
        app:iconTint="@color/material_drawer_accent"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/settings"
        android:orderInCategory="401"
        android:title="@string/settings" />

    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/settings"
        android:orderInCategory="401"
        android:title="@string/sync_now" />
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/en"
        android:orderInCategory="401"
        android:title="@string/logout" />

</menu>