<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.tabs.TabLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tab_layout"
    android:layout_width="wrap_content"
    android:layout_height="?attr/actionBarSize"
    android:orientation="vertical"
    app:tabMinWidth="100dp"
    app:tabMode="scrollable"
    app:tabSelectedTextColor="@color/md_black_1000"
    app:tabTextColor="@color/md_white_1000">


    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_home"
        android:text="@string/menu_home" />

    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ourlibrary"
        android:text="@string/menu_library"
        tools:viewBindingIgnore="true" />

    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ourcourses"
        android:text="@string/menu_courses"
        tools:viewBindingIgnore="true" />

    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/team"
        android:text="@string/team"
        tools:viewBindingIgnore="true" />

    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/business"
        android:text="@string/enterprises"
        tools:viewBindingIgnore="true" />

    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/survey"
        android:text="@string/menu_community"
        tools:viewBindingIgnore="true" />
</com.google.android.material.tabs.TabLayout>