<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_large"
    tools:context=".ui.feedback.FeedbackFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal"
            android:text="@string/is_urgent"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/text_size_large" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/tl_urgent"
            android:padding="@dimen/padding_normal"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/rg_urgent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
               >

                <RadioButton
                    android:id="@+id/urgent_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/urgent_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />
            </RadioGroup>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal"
            android:text="@string/feedback_type"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/text_size_large" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/tl_type"
            android:padding="@dimen/padding_normal"
            android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/rg_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
          >

            <RadioButton
                android:id="@+id/type_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question" />

            <RadioButton
                android:id="@+id/type_bug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bug" />

            <RadioButton
                android:id="@+id/type_suggestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suggestion" />
        </RadioGroup>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_normal">

            <EditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_feedback" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_submit"
                style="@style/GreyButtons"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel"
                style="@style/GreyButtons" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
