<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spn_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/transaction_type"
        android:padding="@dimen/padding_normal" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_normal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_normal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingTop="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"
        android:text="@string/date" />
    <TextView
        android:id="@+id/tv_select_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_date"
        android:padding="@dimen/padding_normal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginTop="@dimen/padding_small"
        android:text="@string/add_image" />
    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="@dimen/padding_normal"
        android:adjustViewBounds="true"
        android:contentDescription="@string/finance_image"
        android:scaleType="centerCrop"
        android:visibility="gone" />
</LinearLayout>
